--- a/app/src/main/res/drawable/shape_round_rectable.xml
+++ b/app/src/main/res/drawable/shape_round_rectable.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="@color/inactive_color" />
 
-    <corners android:radius="50dp" />
+    <corners android:radius="@dimen/_25sdp" />
 
 </shape>
