--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -267,6 +267,27 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:id="@+id/viewMoreLL"
+        android:layout_width="@dimen/_120sdp"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginStart="@dimen/_100sdp"
+        android:layout_marginBottom="@dimen/_100sdp"
+        android:background="@drawable/shape_green_round_rect_core"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text="View More"
+            android:textColor="@color/primary_color"
+            android:textSize="@dimen/_12ssp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/layoutMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
