--- a/app/src/main/res/layout/activity_pay_request_transaction.xml
+++ b/app/src/main/res/layout/activity_pay_request_transaction.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f2f4f5"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     tools:context=".view.PayRequestTransactionActivity">
 
     <LinearLayout
@@ -123,6 +122,7 @@
             android:layout_marginStart="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_18sdp"
             android:layout_marginEnd="@dimen/_11sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
             app:cardCornerRadius="@dimen/_10sdp">
 
             <LinearLayout
@@ -130,67 +130,90 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/payLL"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_72sdp"
-                    android:orientation="horizontal">
+                    android:layout_height="@dimen/_70sdp"
+                    >
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/amontDollorTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_bold"
+                        android:text="$"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/_40sdp"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_32sdp"
+                        android:visibility="gone" />
 
-                        <EditText
-                            android:id="@+id/payrequestET"
-                            android:layout_width="@dimen/_150sdp"
-                            android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
-                            android:fontFamily="@font/opensans_bold"
-                            android:gravity="right"
-                            android:hint="0.00"
-                            android:inputType="number"
-                            android:maxLength="15"
-                            android:singleLine="true"
-                            android:textColor="@color/primary_black"
-                            android:textColorHint="@color/light_gray"
-                            android:textCursorDrawable="@drawable/cursor_color_text"
-                            android:textDirection="ltr"
-                            android:textSize="@dimen/_54ssp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.222"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
+                    <EditText
+                        android:id="@+id/payrequestET"
+                        android:layout_width="@dimen/_130sdp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginStart="@dimen/_40sdp"
+                        android:layout_marginLeft="18dp"
+                        android:layout_toRightOf="@id/amontDollorTV"
+                        android:background="@android:color/transparent"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="right"
+                        android:layout_centerVertical="true"
+                        android:hint="0.00"
+                        android:inputType="number"
+                        android:cursorVisible="true"
+                        android:clickable="false"
+                        android:editable="false"
+                        android:focusable="false"
+                        android:maxLength="15"
+                        android:singleLine="true"
+                        android:textColor="@color/primary_black"
+                        android:textColorHint="@color/light_gray"
+                        android:textCursorDrawable="@drawable/cursor_color_text"
+                        android:textDirection="ltr"
+                        android:textSize="@dimen/_40ssp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.222"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
 
-                        <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_bold"
-                            android:text="CYN"
-                            android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_11ssp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.142"
-                            app:layout_constraintStart_toEndOf="@+id/payrequestET"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.635" />
+                    <TextView
+                        android:id="@+id/coyniTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginStart="11dp"
+                        android:layout_marginLeft="11dp"
+                        android:layout_marginTop="@dimen/_45sdp"
+                        android:layout_marginEnd="44dp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:layout_toRightOf="@id/payrequestET"
+                        android:fontFamily="@font/opensans_bold"
+                        android:text="CYN"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.142"
+                        app:layout_constraintStart_toEndOf="@+id/payrequestET"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_component_arrow"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.317"
-                            app:layout_constraintStart_toEndOf="@+id/textView"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.571" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </LinearLayout>
+                    <ImageView
+                        android:id="@+id/changeCurrencyTypeIV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginStart="56dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_toEndOf="@+id/payrequestET"
+                        android:src="@drawable/ic_component_arrow" />
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/payrequestAvailBalLL"
@@ -201,44 +224,69 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/availBalTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:visibility="visible"
                         android:fontFamily="@font/opensans_regular"
                         android:text="Available Balance: "
                         android:textColor="#404040"
                         android:textSize="@dimen/_12ssp" />
 
                     <TextView
+                        android:id="@+id/availBal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_bold"
                         android:gravity="center"
+                        android:visibility="visible"
                         android:text=" 12345.00CYN"
                         android:textColor="#404040"
                         android:textSize="@dimen/_12ssp" />
+                    <TextView
+                        android:id="@+id/minAmountErr"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Minimum amount is [act.limit]CYN"
+                        android:textColor="#E32B25"
+                        android:textSize="@dimen/_12ssp"
+                        />
+                    <TextView
+                        android:id="@+id/exceedAvailBalErr"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Amount entered exceeds available balance"
+                        android:textColor="#E32B25"
+                        android:textSize="@dimen/_12ssp"
+                        />
                 </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_1sdp"
-                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_15sdp"
-                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_8sdp"
                     android:background="@color/light_gray" />
 
                 <LinearLayout
                     android:id="@+id/addNoteClickLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/_15sdp">
+                    >
 
                     <TextView
+                        android:id="@+id/addNoteTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginTop="@dimen/_7sdp"
-                        android:layout_marginBottom="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_15sdp"
+                        android:layout_marginBottom="@dimen/_40sdp"
                         android:fontFamily="@font/opensans_regular"
                         android:text="Optional: Add Note (Maximum 120 characters )"
                         android:textAlignment="center"
@@ -249,9 +297,6 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_2sdp" />
     </LinearLayout>
 
     <LinearLayout
@@ -471,6 +516,7 @@
                 android:textSize="@dimen/_16ssp" />
 
             <TextView
+                android:id="@+id/keyDotTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
