--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -37,6 +37,7 @@
             android:layout_height="@dimen/_38sdp"
             android:layout_marginTop="@dimen/_11sdp"
             android:layout_marginRight="@dimen/_21sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
             app:cardCornerRadius="@dimen/_19sdp">
 
             <LinearLayout
@@ -61,10 +62,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignParentStart="true"
+                        android:layout_toLeftOf="@id/filterIconIV"
                         android:layout_marginStart="@dimen/_8sdp"
                         android:hint="Merchant’s Name/Reference No."
-                        android:textColor="@color/dark_grey"
+                        android:textColor="@color/primary_black"
+                        android:textColorHint="@color/dark_grey"
                         android:textSize="@dimen/_10ssp"
+                        android:singleLine="true"
+                        android:maxLines="1"
+                        android:cursorVisible="false"
+                        android:textCursorDrawable="@drawable/cursor_color_text"
                         android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
                     <View
@@ -88,6 +95,47 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
+
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/pbLoader"
+        android:layout_below="@+id/layoutTop">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/transactionListRV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:clipToPadding="false"
+            android:divider="@null"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/transactionListRV"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="@dimen/_11sdp"-->
+<!--        android:layout_marginEnd="@dimen/_11sdp"-->
+<!--        android:paddingStart="@dimen/_11sdp"-->
+<!--        />-->
+
+    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="You have no transactions"
+    android:gravity="center"
+    android:visibility="gone"
+    android:fontFamily="@font/opensans_regular"
+    android:textColor="@color/dark_grey"
+    android:textSize="@dimen/_10ssp"
+
+    />
 
 
 </LinearLayout>
