--- a/app/src/main/res/layout/payment_expire.xml
+++ b/app/src/main/res/layout/payment_expire.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_core"
+    android:background="@drawable/roundeddialog"
     android:orientation="vertical"
     android:padding="@dimen/_20sdp">
 
@@ -26,6 +26,7 @@
         android:textSize="@dimen/_16ssp" />
 
     <TextView
+        android:id="@+id/tvMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_27sdp"
@@ -41,6 +42,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvRemove"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,6 +57,7 @@
             android:textColor="@color/primary_color" />
 
         <TextView
+            android:id="@+id/tvEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_8sdp"
