--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -1,105 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#f2f4f5"
     android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
+        android:fillViewport="true"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:background="@drawable/backgrndbtmcornrs"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/_21sdp"
-            android:paddingRight="@dimen/_21sdp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_14sdp"
-                android:background="@color/white"
-                android:src="@drawable/ic_x" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_11sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:text="Buy Token"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#f2f4f5"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_32sdp"
-                android:layout_marginRight="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_16sdp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="Payment Method"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
-                android:layout_marginRight="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_18sdp"
-                android:orientation="horizontal">
+                android:background="@drawable/backgrndbtmcornrs"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/_21sdp"
+                android:paddingTop="@dimen/_40sdp"
+                android:paddingRight="@dimen/_21sdp">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/_16sdp"
-                    android:paddingBottom="@dimen/_16sdp"
-                    android:src="@drawable/ic__01_bank" />
+                <LinearLayout
+                    android:id="@+id/lyBuyClose"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:src="@drawable/ic_x" />
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:paddingTop="@dimen/_16sdp"
-                    android:paddingBottom="@dimen/_16sdp"
-                    android:text="Bank of America  ••••5359"
-                    android:textColor="@color/primary_black" />
-
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_60sdp"
-                    android:layout_marginTop="@dimen/_5sdp"
-                    android:paddingTop="@dimen/_16sdp"
-                    android:paddingBottom="@dimen/_16sdp"
-                    android:src="@drawable/ic_chevron_right" />
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:layout_marginBottom="@dimen/_11sdp"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="Buy Token"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_16ssp" />
             </LinearLayout>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#f2f4f5"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/_21sdp"
+                android:paddingRight="@dimen/_21sdp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Payment Method"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <RelativeLayout
+                    android:id="@+id/lyPayMethod"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginBottom="@dimen/_18sdp"
+                    android:paddingTop="@dimen/_16sdp"
+                    android:paddingBottom="@dimen/_16sdp">
+
+                    <ImageView
+                        android:id="@+id/imgBankIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/ic_bankactive" />
+
+                    <LinearLayout
+                        android:id="@+id/lyCDetails"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_toLeftOf="@+id/imgArrow"
+                        android:layout_toRightOf="@+id/imgBankIcon"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:id="@+id/tvPayHead"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:singleLine="true"
+                            android:text="Bank of America"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
+
+                        <TextView
+                            android:id="@+id/tvAccNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:singleLine="true"
+                            android:text="••••5359"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_11ssp" />
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/lyBDetails"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_toLeftOf="@+id/imgArrow"
+                        android:layout_toRightOf="@+id/imgBankIcon"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvBankName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toLeftOf="@+id/tvBAccNumber"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:singleLine="true"
+                            android:text="Bank of America"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
+
+                        <TextView
+                            android:id="@+id/tvBAccNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginLeft="@dimen/_5sdp"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="••••5359"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_11ssp" />
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/tvLimit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/lyBDetails"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_toLeftOf="@+id/imgArrow"
+                        android:layout_toRightOf="@+id/imgBankIcon"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Your [daily or weekly] limit is [amount]"
+                        android:textColor="@color/xdark_gray"
+                        android:textSize="@dimen/_9ssp"></TextView>
+
+                    <ImageView
+                        android:id="@+id/imgArrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:src="@drawable/ic_chevron_right" />
+                </RelativeLayout>
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -113,60 +187,68 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
                     android:orientation="vertical">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_17sdp"
                         android:background="@color/white"
-                        android:orientation="horizontal">
+                        android:gravity="right"
+                        android:orientation="horizontal"
+                        android:paddingLeft="@dimen/_20sdp"
+                        android:paddingRight="@dimen/_30sdp">
 
                         <TextView
-                            android:id="@+id/goneTV"
+                            android:id="@+id/tvCurrency"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
                             android:layout_gravity="center"
-                            android:layout_marginLeft="@dimen/_67sdp"
+                            android:layout_toLeftOf="@+id/etAmount"
                             android:fontFamily="@font/opensans_bold"
-                            android:gravity="center"
                             android:paddingTop="@dimen/_9sdp"
                             android:paddingBottom="@dimen/_7sdp"
                             android:text="$"
-                            android:textColor="@color/black"
+                            android:textColor="@color/primary_black"
                             android:textSize="@dimen/_40ssp" />
 
                         <EditText
-                            android:id="@+id/inputEV"
+                            android:id="@+id/etAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_toLeftOf="@+id/divider"
                             android:autoSizeMinTextSize="@dimen/_12ssp"
                             android:background="@color/white"
                             android:fontFamily="@font/opensans_bold"
                             android:hint="0.00"
                             android:inputType="numberDecimal"
-                            android:maxLength="15"
+                            android:maxLength="7"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_53ssp" />
 
                         <View
+                            android:id="@+id/divider"
                             android:layout_width="@dimen/_1sdp"
                             android:layout_height="@dimen/_42sdp"
+                            android:layout_centerVertical="true"
                             android:layout_gravity="center"
                             android:layout_marginLeft="@dimen/_5sdp"
+                            android:layout_toLeftOf="@+id/imgConvert"
                             android:background="@color/light_gray" />
 
                         <ImageView
+                            android:id="@+id/imgConvert"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
                             android:layout_marginLeft="@dimen/_7sdp"
                             android:layout_marginTop="@dimen/_8sdp"
                             android:src="@drawable/ic_download" />
-                    </LinearLayout>
+                    </RelativeLayout>
 
                     <View
                         android:layout_width="match_parent"
@@ -180,8 +262,9 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -189,9 +272,20 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tvExchange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/opensans_regular"
+            android:text="Exchange Rate: 1.00 CYN = $ 1.00"
+            android:textColor="@color/xdark_gray"
+            android:textSize="@dimen/_9ssp"></TextView>
+
         <com.greenbox.coyni.utils.keyboards.CustomKeyboard
             android:id="@+id/ckb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp" />
     </LinearLayout>
 </RelativeLayout>
