--- a/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_48sdp"
     android:background="@color/white">
@@ -45,6 +46,15 @@
                 android:text="••••5359"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp"></TextView>
+
+            <ImageView
+                android:id="@+id/imgTick"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:src="@drawable/ic_custom_tick"
+                android:visibility="gone"
+                app:tint="@color/primary_green" />
         </LinearLayout>
 
         <LinearLayout
